--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <option value="">Noviembre</option>
           <option value="">Diciembre</option>
         </select>
-        <button class="button">Cargar</button>
+        <button class="button" onclick="cargarAleatorios(1)">Cargar</button>
       </div>
 
       <table>
